web/app/themes/ppj/src/sass/components/find-a-job.sass
/* ... */
        max-width: 32rem

    &--no-jobs
      background-color: $color-notification

      #{$s}__job-feed-text-container
        max-width: 40rem


  &__job-feed-text-container
    line-height: 2.6rem
    margin: auto
    text-align: left

    & a
      text-decoration: underline

      &:hover
        cursor: pointer

  &__jobs-available
    align-items: center
    border-bottom: $border
    border-top: $border
    display: flex
    font-weight: $font-weight-bold
    height: 100%
    padding: $common-spacing
    text-align: left

  &__results
    $sr: &
    @include bp('portrait')
      flex: 1
      max-height: 100vh

  &__view-controls
    display: flex
    justify-content: space-between
    width: 100%

  &__view-container
    height: 100%
    margin: $common-spacing/2 0

    @include bp('portrait')
      margin-bottom: 0
      margin-top: 0

  &__map-view
    @include bp('portrait')
      display: flex
      flex-direction: row-reverse
      height: 100%
      justify-content: space-between

  &__rectangle
    border-bottom: $border
    border-top: $border
    border-bottom-width: .2rem
    border-top-width: .2rem
    box-sizing: border-box

    @include bp('portrait')
      position: absolute
      top: 0
      bottom: 0
      left: 0
      right: 0

  &__map-container
    position: relative

    @include bp('portrait')
      bottom: 0
      position: absolute
      right: 0
      top: 0
      width: 60%

    @include bp('landscape')

  &__map-zoom-button-container
    position: absolute
    right: $common-spacing / 2
    top: $common-spacing / 2
    z-index: 1

    @include bp('portrait')
      right: $common-spacing
      top: $common-spacing

  &__map-button-zoom
    $mbz: &
    $size: 3rem
    align-items: center
    background-color: $color-white
    border: 0 solid $color-light
    box-shadow: $map-shadow
    border-radius: $size
    cursor: pointer
    display: flex
    height: $size
    justify-content: center
    width: $size

    &-icon
      fill: $color-dark
      height: 100%
      width: 100%

    .zoom-icon-background
      fill: blue

    @include bp('portrait')
      $size: 6rem
      height: $size
      width: $size

    &:active
      position: relative
      top: .1rem

    &:before
      display: block
      color: $color-dark
      font-size: 3rem

    &--out
      margin-top: $common-spacing / 2

      @include bp('portrait')
        margin-top: $common-spacing

  &__jobs
    @include bp('portrait')
      bottom: 0
      left: 0
      position: absolute
      top: 20rem
      width: 40%

  &__view-list-container
    @include bp('portrait')
      position: relative

    @include bp('landscape')

  // FADING:
  // https://codepen.io/anon/pen/opBRLp
  &__view-list

    & > li
      border-top: $border
      background-color: $color-white

      &:first-child
        border-top: none

        @include bp('portrait')
          position: relative
          z-index: 2

      &:last-child
        @include bp('portrait')
          position: relative

      &:nth-child(2):before,
      &:nth-last-child(2):after
        @include bp('portrait')
          content: ''
          display: block
          height: $common-spacing * 5
          left: 0
          pointer-events: none
          position: absolute
          right: 0

      &:nth-child(2):before
        @include bp('portrait')
          background: linear-gradient(to bottom, $color-white, $color-transparent2)
          top: 0
          z-index: 1

      &:nth-last-child(2):after
        @include bp('portrait')
          background: linear-gradient(to top, $color-white, $color-transparent2)
          bottom: 0

      &:hover:nth-child(2):before
        @include bp('portrait')
          cursor: n-resize

      &:hover:nth-last-child(2):after
        @include bp('portrait')
          cursor: s-resize

    @include bp('portrait')
      height: 100%
      overflow-y: auto
      -webkit-overflow-scrolling: touch
      padding: 0 $common-spacing

    &-element
      cursor: pointer

  &__job-list-message
    background-color: rgba($color-main, 0.2)
    display: none
    font-weight: 700
    padding: $common-spacing * 1.5
    text-align: center
    text-decoration: underline

    .youth-custody &
      display: block

  &__map
    display: flex
    height: 24rem
    justify-content: center
    position: relative
    width: 100%

    @include bp('portrait')
      height: 100%

  &__map-marker
    $c: &
    $size: $common-spacing * 2
    cursor: pointer
    pointer-events: none
    position: absolute
    transition: opacity $main-transition-duration

    &:hover
      opacity: 1
      z-index: 2

    &-icon

    &-label
      background-color: $color-white
      border: 1px solid $color-light
      border-radius: .25em
      box-shadow: $map-shadow
      color: $color-dark
      font-size: 1.6rem
      font-weight: $font-weight-bold
      line-height: 1
      opacity: 0
      padding: .5em
      pointer-events: none
      position: absolute
      top: .8rem
      transform: translateX(-50%)
      white-space: nowrap
      z-index: 1

      @include bp('large')
        font-size: 1.8rem

    &--job-location-group
      #{$c}-icon
        background-color: $color-white
        border-color: $color-dark
        background: url('/app/themes/ppj/dest/img/inactive_pin.png')
        background-size: 3.2rem 3.8rem
        cursor: pointer
        left: - 1.55rem
        height: 3.8rem
        pointer-events: auto
        position: relative
        top: - 3.5rem
        width: 3.2rem

    &--search-term
      opacity: 1

      #{$c}-icon
        $size: 4.8rem
        background: url('/app/themes/ppj/dest/img/search_pin.png')
        background-size: $size $size
        height: $size
        left: -$size/2
        position: relative
        width: $size
        top: -$size
        z-index: 1000


    &#{$c}--selected
      opacity: 1
      transition: opacity $main-transition-duration
      z-index: 1

      #{$c}-icon
/* ... */

